--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Kartikeya -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Made For You!</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="Media/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +17,9 @@ Kartikeya -->
     />
   </head>
   <body>
+    <div id="loading-circle" class="loading-circle">
+      <div class="spinner"></div>
+    </div>
     <div class="container">
       <div class="section">
         <nav class="navbar">
