--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Kartikeya -->
         </nav>
         <div class="fullscreen-menu" id="fullscreenMenu">
           <span class="close-btn" onclick="toggleMenu()">&times;</span>
-          <a href="index.html">Home</a>
+          <p>This magical corner of the internet is reserved just for YOU!</p>
         </div>
 
         <img src="Media/Quote.png" alt="Quote" class="quote" />
@@ -120,6 +120,25 @@ Kartikeya -->
           You are a
           <div class="text">poem</div>
           with words that touch the heart.
+        </div>
+      </div>
+
+      <div class="section">
+        <img src="Media/Quote2.png" alt="Quote" class="quote2" />
+        <div class="thought ending">
+          Above all, you are
+          <div class="text">truly</div>
+
+          and purely
+          <div class="text">you.</div>
+        </div>
+      </div>
+
+      <div class="section">
+        <img src="Media/butterfly.png" alt="Flower" class="flower" />
+        <div class="thankyou">
+          Thank you, Miss Positive, for making my days happier with your
+          presence!
         </div>
       </div>
 
