--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Kartikeya -->
       <div class="section">
         <img src="Media/butterfly.png" alt="Flower" class="flower" />
         <div class="thankyou">
-          Thank you, Miss Positive, for making my days happier with your
+          Thank you, for making my days happier with your
           presence!
         </div>
       </div>
